k8s/jaeger/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: monitoring
spec:
  rules:
    - host: jaeger.wisdom.mejlholm.org
      http:
        paths:
          - path: /
            backend:
              serviceName: jaeger-query
              servicePort: 80
